--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,30 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-lxml = "*"
-zeep = "*"
-spyne = "*"
-six = "*"
-graphqlclient = "*"
-django-cors-headers = "*"
-djangorestframework = "*"
-pillow = "*"
+django = "==4.2.7"
+lxml = "==4.9.3"
+zeep = "==4.2.1"
+spyne = "==2.14.0"
+six = "==1.16.0"
+graphqlclient = "==0.2.4"
+django-cors-headers = "==4.3.1"
+djangorestframework = "==3.14.0"
+pillow = "==10.1.0"
+asgiref = "==3.7.2"
+attrs = "==23.1.0"
+certifi = "==2023.11.17"
+charset-normalizer = "==3.3.2"
+idna = "==3.4"
+isodate = "==0.6.1"
+platformdirs = "==4.0.0"
+pytz = "==2023.3.post1"
+requests = "==2.31.0"
+requests-file = "==1.5.1"
+requests-toolbelt = "==1.0.0"
+sqlparse = "==0.4.4"
+typing-extensions = "==4.8.0"
+tzdata = "==2023.3"
+urllib3 = "==2.1.0"
 
 [dev-packages]
 
